k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ajudadorabot-api-service
  labels:
    app.kubernetes.io/name: ajudadorabot
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ajudadorabot
    app.kubernetes.io/component: api
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: ajudadorabot-nginx-service
  labels:
    app.kubernetes.io/name: ajudadorabot
    app.kubernetes.io/component: nginx
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ajudadorabot
    app.kubernetes.io/component: nginx
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
